[project]
name = "smartscan"
version = "0.1.0"
description = "Escáner de puertos inteligente con CVE, Shodan y DNS"
dependencies = [
    "aiohttp>=3.9.0",
    "aiodns>=3.1.1",
    "shodan>=1.30.0",
    "greynoise>=2.0.0",
    "dnspython>=2.8.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
]

[project.scripts]
smartscan = "smartscan.cli:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
